--- a/frontend/src/app/components/car-control/car-control.html
+++ b/frontend/src/app/components/car-control/car-control.html
@@ -26,11 +26,11 @@
     <div class="side-controls">
       <div class="row-controls">
         <button mat-fab color="primary"
-                (mousedown)="onLeft()" (mouseup)="onStop()" (touchstart)="onLeft()" (touchend)="onStop()">
+                (mousedown)="onLeft()" (touchstart)="onLeft()" >
           <mat-icon>arrow_back</mat-icon>
         </button>
         <button mat-fab color="primary"
-                (mousedown)="onRight()" (mouseup)="onStop()" (touchstart)="onRight()" (touchend)="onStop()">
+                (mousedown)="onRight()" (touchstart)="onRight()">
           <mat-icon>arrow_forward</mat-icon>
         </button>
       </div>
